--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,11 @@
     #name-input-container {
       margin-top: 20px;
     }
-    #player-name {
+    #player-name, #room-id {
       padding: 10px;
       font-size: 16px;
       width: 200px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -71,11 +72,11 @@
     <div id="faces-container" style="display: none;"></div>
     <div id="name-input-container">
       <input type="text" id="player-name" placeholder="Enter your name" />
-      <button id="start-button">Start Game</button>
+      <input type="text" id="room-id" placeholder="Enter or create a room ID" /> <!-- Room ID field -->
+      <button id="start-button">Join Room</button>
     </div>
     <div id="message"></div>
   </div>
-  <!-- Include Socket.IO client library -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
