--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,15 @@
       <input type="text" id="player-name" placeholder="Enter your name" />
       <input type="text" id="room-id" placeholder="Enter or create a room ID" />
       <!-- Category selection dropdown -->
+
+
+
       <select id="category-select">
         <option value="faces">Faces</option>
-        <option value="buildings">Famous Buildings</option>
-        <option value="animals">Animals</option>
-      </select>
+  <option value="buildings">Famous Buildings</option>
+  <option value="animals">Animals</option>
+  <option value="unesco">UNESCO World Heritage Sites</option> <!-- Added UNESCO option -->
+</select>
       <button id="start-button">Join Room</button>
     </div>
     
