--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
         <option value="faces">Faces</option>
         <option value="buildings">Famous Buildings</option>
         <option value="animals">Animals</option>
-        <option value="unesco">UNESCO World Heritage Sites</option> <!-- Added UNESCO option -->
+        <option value="unesco">UNESCO World Heritage Sites</option>
       </select>
       <button id="start-button">Join Room</button>
     </div>
